[gd_scene load_steps=7 format=3 uid="uid://dqrwxwpxgtylj"]

[ext_resource type="Script" path="res://demo/subscenes/classic_wheel_demo.gd" id="1_wmdv4"]
[ext_resource type="PackedScene" uid="uid://c3jlb4w5qfd00" path="res://component_wheel.tscn" id="2_cgadj"]

[sub_resource type="Gradient" id="Gradient_tbo00"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.510417, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_clq8j"]
gradient = SubResource("Gradient_tbo00")
width = 50
height = 50
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.75, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_hj3n0"]
font_size = 144
font_color = Color(0.57, 1, 0.613, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(10, 10)

[sub_resource type="LabelSettings" id="LabelSettings_kvhn4"]
font_size = 144
font_color = Color(1, 0.57, 0.57, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(10, 10)

[node name="ClassicWheel" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmdv4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ComponentWheel" parent="VBoxContainer" instance=ExtResource("2_cgadj")]
unique_name_in_owner = true
layout_mode = 2

[node name="ScoreBar" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(550, 50)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="GoodBar" type="ColorRect" parent="VBoxContainer/ScoreBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 10
color = Color(0, 0.67, 0.0893334, 1)

[node name="IndicatorRect" type="TextureRect" parent="VBoxContainer/ScoreBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = SubResource("GradientTexture2D_clq8j")

[node name="BadBar" type="ColorRect" parent="VBoxContainer/ScoreBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 2
color = Color(0.71, 0, 0, 1)

[node name="WinLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "YOUR DID IT"
label_settings = SubResource("LabelSettings_hj3n0")
horizontal_alignment = 1

[node name="LoseLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "FAILED 2 WHEEL"
label_settings = SubResource("LabelSettings_kvhn4")
horizontal_alignment = 1

[connection signal="new_segment_chosen" from="VBoxContainer/ComponentWheel" to="." method="_handle_choice"]
[connection signal="new_segment_selected" from="VBoxContainer/ComponentWheel" to="." method="_update_on_selection"]
[connection signal="puzzle_finished" from="VBoxContainer/ComponentWheel" to="." method="_handle_finished_puzzle"]
